--- a/README
+++ b/README
@@ -7,6 +7,9 @@ Released under BSD license.
 This script reads the Wikimedia-Site-Requests project board on Phabricator
 and queries Gerrit to get information about open changes.
 
+It requires PhantomJS 2.x to scrape Phabricator board.
+Ubuntu Trusty package is with PhantomJS 1.9.0 and not supported by this tool.
+
 It then prints the lines of changes to deploy, ready to add to our wiki page
 https://wikitech.wikimedia.org/wiki/Deployments.
 
